fix homescreen high contrast bugs

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -383,12 +383,14 @@
         color: @HCtextColor !important;
         border-color: @HCtextColor !important;
 
-        .header {
+        .header,
+        span.view-all-button {
             opacity: 1 !important;
-            color: @HCtextColor;
+            color: @HCtextColor !important;
         }
 
-        .homefooter a {
+        .homefooter a,
+        .homefooter i {
             color: @HCtextColor !important
         }
     }
